--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,67 +1,38 @@
-html,
-body {
-  height: 100%;
+.container {
+    width: 30%;
+    box-shadow: 0px 0px 15px #999;
+    padding: 10px;
+    min-height: 30vh;
+    position: relative;
 }
 
-body {
-  text-align: center;
-  background-image: url("../images/tacky.jpg");
-}
-
-#wrapper {
-  width: 960px;
-  min-height: 80%;
-  box-sizing: border-box;
-  padding: 5% 0;
-  margin: 5% auto;
-  background-color: #fff17a;
-}
-
-#sub-wrapper {
-  position: relative;
-  top: 20%;
-}
-
-button {
-  display: block;
-  width: 400px;
-  height: 100px;
-  margin: 10px auto 0;
-  font-size: 42px;
-  cursor: pointer;
-  background: transparent;
-  border: 0;
-}
-
-h1 {
-  margin-bottom: 50px;
-  font-family: Geo, sans-serif;
-  font-size: 6.5em;
-  font-weight: bold;
-  color: blue;
+div#test {
+    widows: 30%;
+    /* border: solid 1px #000;  */
+    padding: 10px 40px;
 }
 
 h2 {
-  margin-bottom: 25px;
-  font-size: 35px;
+    color: royalblue;
+    text-align: center;
+    background-color: #eee;
+    padding: 10px 0;
+    margin-top: 0;
 }
 
-h3 {
-  margin-bottom: 10px;
-  font-size: 25px;
+#start-button {
+    padding: 10px 10px;
+    margin-top: 25%;
+    margin-left: 10%;
 }
 
-#start {
-  margin-top: 10%;
-  background: pink;
-  border: 2px solid blue;
+.content {
+    display: none;
 }
 
-#quiz-area h2 {
-  margin-top: 50px;
-}
-
-button:hover {
-  background: pink;
-  border: 2px solid blue;
+#timer {
+    position: absolute;
+    top: 70px;
+    left: 50px;
+    color: red;
 }
